--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: 'Roboto';
+  font-family: "Roboto";
 }
 
 header {
@@ -22,7 +22,7 @@ header {
   align-items: center;
   width: 100%;
   height: 48px;
-  background-color: #FFDD33;
+  background-color: #ffdd33;
 }
 
 .header-bottom-section a {
@@ -54,3 +54,59 @@ header div span img {
   color: rgb(169, 169, 169);
   border-left: 1px solid rgb(169, 169, 169);
 }
+
+footer {
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
+  color: #aaa;
+  text-align: center;
+}
+
+.footer-top {
+  display: flex;
+  flex-direction: column;
+  background-color: #131313;
+  justify-items: center;
+  align-items: center;
+  height: 160px;
+}
+
+.icons {
+  margin-top: 30px;
+}
+
+.icons i {
+  padding: 12px;
+  border-radius: 50%;
+  background-color: #333;
+  font-size: 20px;
+  color: white;
+  margin: 10px 10px;
+}
+
+.bottom-links {
+  width: 100%;
+  margin-top: 20px;
+}
+
+.bottom-links a {
+  text-decoration: none;
+  color: #aaa;
+  margin: 0 10px;
+  font-size: 14px;
+  font-family: "Shentox";
+}
+
+.footer-bottom {
+  display: flex;
+  height: 97px;
+  background-color: black;
+  align-items: center;
+  justify-content: center;
+}
+
+/* .footer-top .bottom-links {
+  display: inline;
+  text-align: center;
+} */
