--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: "Roboto";
+  font-family: 'Roboto';
 }
 
 header {
@@ -56,7 +56,7 @@ header div span img {
 }
 
 footer {
-  position: absolute;
+  position: relative;
   bottom: 0px;
   width: 100%;
   color: #aaa;
@@ -95,7 +95,7 @@ footer {
   color: #aaa;
   margin: 0 10px;
   font-size: 14px;
-  font-family: "Shentox";
+  font-family: 'Shentox';
 }
 
 .footer-bottom {
@@ -106,7 +106,74 @@ footer {
   justify-content: center;
 }
 
-/* .footer-top .bottom-links {
-  display: inline;
-  text-align: center;
-} */
+.dummy {
+  height: 600px;
+  width: 100%;
+  color: white;
+  background-color: white;
+}
+
+.highlights {
+  height: calc(100vh - 96px);
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(3, 1fr);
+  gap: 30px;
+}
+
+.highlight-card {
+  margin: 4px 4px;
+  padding: 10px;
+  position: relative;
+  background-size: cover;
+  background-position: 50%;
+}
+
+.primary-text {
+  color: white;
+  font-size: 20px;
+}
+
+.secondary-text {
+  color: rgb(148, 148, 148);
+  font-size: 13px;
+  font-weight: bold;
+}
+
+.bottom-pos {
+  position: absolute;
+  bottom: 10px;
+}
+
+.highlight-card:nth-child(1) {
+  background-image: linear-gradient(
+      to bottom,
+      rgba(255, 255, 255, 0.1),
+      rgba(0, 0, 0, 1)
+    ),
+    url('assets/highlight-1.jpg');
+}
+
+.highlight-card:nth-child(2) {
+  background-image: linear-gradient(
+      to bottom,
+      rgba(255, 255, 255, 0.1),
+      rgba(0, 0, 0, 1)
+    ),
+    url('assets/highlight-2.png');
+}
+
+.highlight-card:nth-child(3) {
+  background-image: linear-gradient(
+      to bottom,
+      rgba(255, 255, 255, 0.1),
+      rgba(0, 0, 0, 1)
+    ),
+    url('assets/hightlight-3.png');
+}
+
+.volatile-text {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
