--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: 'Roboto';
+  font-family: "Roboto";
 }
 
 header {
@@ -95,7 +95,7 @@ footer {
   color: #aaa;
   margin: 0 10px;
   font-size: 14px;
-  font-family: 'Shentox';
+  font-family: "Shentox";
 }
 
 .footer-bottom {
@@ -151,7 +151,7 @@ footer {
       rgba(255, 255, 255, 0.1),
       rgba(0, 0, 0, 1)
     ),
-    url('assets/highlight-1.jpg');
+    url("assets/highlight-1.jpg");
 }
 
 .highlight-card:nth-child(2) {
@@ -160,7 +160,7 @@ footer {
       rgba(255, 255, 255, 0.1),
       rgba(0, 0, 0, 1)
     ),
-    url('assets/highlight-2.png');
+    url("assets/highlight-2.png");
 }
 
 .highlight-card:nth-child(3) {
@@ -169,11 +169,28 @@ footer {
       rgba(255, 255, 255, 0.1),
       rgba(0, 0, 0, 1)
     ),
-    url('assets/hightlight-3.png');
+    url("assets/hightlight-3.png");
 }
 
 .volatile-text {
   position: relative;
   width: 100%;
   height: 100%;
+}
+
+.card {
+  display: grid;
+  grid-template-columns: repeat(21, 1fr);
+  /* grid-template-rows: 43px 59px 82px 63px; */
+}
+
+.card img {
+  grid-column: 3 / span 3;
+  grid-row: 1 / 2;
+}
+
+.card-title {
+  grid-column: 2 / span 19;
+  background-color: pink;
+  height: 43px;
 }
