--- a/style.css
+++ b/style.css
@@ -11,9 +11,9 @@ header {
 .header-top-section {
   display: flex;
   justify-content: space-between;
+  /* align-items: center; */
   width: 100%;
   height: 48px;
-  /* border-bottom: 1px solid red; */
 }
 
 .header-bottom-section {
@@ -248,4 +248,39 @@ footer {
   list-style: none;
   margin: 40px 10px;
   padding: 0 10px;
+}
+
+.header-links {
+  display: none;
+  list-style: none; 
+  font-size: 14px;
+}
+
+.header-links li a{
+  text-decoration: none;
+  color: #cacaca;
+}
+.header-links li {
+  padding-bottom: 10px;
+  display: inline;
+}
+
+@media only screen and (min-width: 768px) {
+  .hidden-md {
+    display: none;
+  }
+
+  .header-links {
+  display: inline;
+}
+}
+
+@media only screen and (min-width: 1024px) {
+  .hidden-lg {
+    display: none;
+  }
+
+  .header-links {
+  display: inline;
+}
 }
