--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: "Roboto";
+  font-family: "Roboto", sans-serif;
 }
 
 header {
@@ -11,6 +11,7 @@ header {
 .header-top-section {
   display: flex;
   justify-content: space-between;
+
   /* align-items: center; */
   width: 100%;
   height: 48px;
@@ -23,23 +24,49 @@ header {
   justify-content: space-between;
 }
 
-.thin-head ul{
+.thin-head ul {
   margin: 0 20px;
   display: inline;
 }
 
-.thin-head ul li a{
+.bottom-links a {
+  text-decoration: none;
+  color: #aaa;
+  margin: 0 10px;
+  font-size: 14px;
+  font-family: "Shentox", sans-serif;
+}
+
+.header-bottom-section a {
+  font-size: 14px;
+  font-weight: 200;
+  text-decoration: none;
+  color: black;
+}
+
+.header-links li a {
+  text-decoration: none;
+  color: #cacaca;
+  padding: 0 12px;
+}
+
+.thin-head ul li a {
   text-decoration: none;
   color: #898989;
   font-size: 13px;
   margin: 0 5px;
 }
 
-.thin-head ul li{
+.header-links li {
+  padding-bottom: 10px;
   display: inline;
 }
 
-.header-top-section span{
+.thin-head ul li {
+  display: inline;
+}
+
+.header-top-section span {
   display: flex;
   align-items: center;
 }
@@ -50,14 +77,7 @@ header {
   align-items: center;
   width: 100%;
   height: 48px;
-  background-color: #ffdd33;
-}
-
-.header-bottom-section a {
-  font-size: 14px;
-  font-weight: 200;
-  text-decoration: none;
-  color: black;
+  background-color: #fd3;
 }
 
 header div i {
@@ -85,7 +105,7 @@ header div i {
 
 footer {
   position: relative;
-  bottom: 0px;
+  bottom: 0;
   width: 100%;
   color: #aaa;
   text-align: center;
@@ -117,14 +137,6 @@ footer {
 .bottom-links {
   width: 100%;
   margin-top: 20px;
-}
-
-.bottom-links a {
-  text-decoration: none;
-  color: #aaa;
-  margin: 0 10px;
-  font-size: 14px;
-  font-family: "Shentox";
 }
 
 .footer-bottom {
@@ -175,7 +187,8 @@ footer {
 }
 
 .highlight-card:nth-child(1) {
-  background-image: linear-gradient(
+  background-image:
+    linear-gradient(
       to bottom,
       rgba(255, 255, 255, 0.1),
       rgba(0, 0, 0, 1)
@@ -184,7 +197,8 @@ footer {
 }
 
 .highlight-card:nth-child(2) {
-  background-image: linear-gradient(
+  background-image:
+    linear-gradient(
       to bottom,
       rgba(255, 255, 255, 0.1),
       rgba(0, 0, 0, 1)
@@ -193,7 +207,8 @@ footer {
 }
 
 .highlight-card:nth-child(3) {
-  background-image: linear-gradient(
+  background-image:
+    linear-gradient(
       to bottom,
       rgba(255, 255, 255, 0.1),
       rgba(0, 0, 0, 1)
@@ -238,9 +253,8 @@ footer {
 .funding-info {
   margin: 0 20px;
   grid-column: 1 / span 21;
-  background-color: rgba(255,68,34,.08);
+  background-color: rgba(255, 68, 34, 0.08);
   height: 60px;
-  
 }
 
 .clear {
@@ -260,14 +274,14 @@ footer {
   top: 10px;
   width: 60px;
   height: 60px;
-  left: -15px
+  left: -15px;
 }
-.separate {
 
+.separate {
   margin: 10px -20px;
 }
 
-.fund-intro ul li a{
+.fund-intro ul li a {
   text-decoration: none;
   color: #f42;
   line-height: 2rem;
@@ -281,18 +295,8 @@ footer {
 
 .header-links {
   display: none;
-  list-style: none; 
+  list-style: none;
   font-size: 14px;
-}
-
-.header-links li a{
-  text-decoration: none;
-  color: #cacaca;
-  padding: 0 12px;
-}
-.header-links li {
-  padding-bottom: 10px;
-  display: inline;
 }
 
 .ss {
@@ -305,7 +309,7 @@ footer {
   }
 
   .header-links {
-  display: inline;
+    display: inline;
   }
 
   .highlights {
@@ -313,7 +317,7 @@ footer {
     grid-template-columns: 5fr 2fr;
     grid-template-rows: 165px 165px;
     height: 100%;
-    gap: 0px;
+    gap: 0;
   }
 
   .highlight-card:nth-child(1) {
@@ -336,12 +340,12 @@ footer {
     grid-template-columns: repeat(3, 1fr);
   }
 
-  .card-info{
+  .card-info {
     max-width: 65%;
   }
-  
-  .fly{
-    left: 0px;
+
+  .fly {
+    left: 0;
   }
 }
 
@@ -351,7 +355,7 @@ footer {
   }
 
   .header-links {
-  display: inline;
+    display: inline;
   }
 
   .highlights {
