--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 header {
@@ -34,7 +34,7 @@ header {
   color: #aaa;
   margin: 0 10px;
   font-size: 14px;
-  font-family: "Shentox", sans-serif;
+  font-family: 'Shentox', sans-serif;
 }
 
 .header-bottom-section a {
@@ -187,33 +187,30 @@ footer {
 }
 
 .highlight-card:nth-child(1) {
-  background-image:
-    linear-gradient(
+  background-image: linear-gradient(
       to bottom,
       rgba(255, 255, 255, 0.1),
       rgba(0, 0, 0, 1)
     ),
-    url("assets/highlight-1.jpg");
+    url('assets/highlight-1.jpg');
 }
 
 .highlight-card:nth-child(2) {
-  background-image:
-    linear-gradient(
+  background-image: linear-gradient(
       to bottom,
       rgba(255, 255, 255, 0.1),
       rgba(0, 0, 0, 1)
     ),
-    url("assets/highlight-2.png");
+    url('assets/highlight-2.png');
 }
 
 .highlight-card:nth-child(3) {
-  background-image:
-    linear-gradient(
+  background-image: linear-gradient(
       to bottom,
       rgba(255, 255, 255, 0.1),
       rgba(0, 0, 0, 1)
     ),
-    url("assets/hightlight-3.png");
+    url('assets/hightlight-3.png');
 }
 
 .volatile-text {
@@ -337,7 +334,6 @@ footer {
   .card-container {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    
   }
 
   .card-info {
