--- a/style.css
+++ b/style.css
@@ -187,7 +187,8 @@ footer {
 }
 
 .highlight-card:nth-child(1) {
-  background-image: linear-gradient(
+  background-image:
+    linear-gradient(
       to bottom,
       rgba(255, 255, 255, 0.1),
       rgba(0, 0, 0, 1)
@@ -196,7 +197,8 @@ footer {
 }
 
 .highlight-card:nth-child(2) {
-  background-image: linear-gradient(
+  background-image:
+    linear-gradient(
       to bottom,
       rgba(255, 255, 255, 0.1),
       rgba(0, 0, 0, 1)
@@ -205,7 +207,8 @@ footer {
 }
 
 .highlight-card:nth-child(3) {
-  background-image: linear-gradient(
+  background-image:
+    linear-gradient(
       to bottom,
       rgba(255, 255, 255, 0.1),
       rgba(0, 0, 0, 1)
