--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 header {
@@ -34,7 +34,7 @@ header {
   color: #aaa;
   margin: 0 10px;
   font-size: 14px;
-  font-family: 'Shentox', sans-serif;
+  font-family: "Shentox", sans-serif;
 }
 
 .header-bottom-section a {
@@ -104,6 +104,8 @@ header div i {
 }
 
 footer {
+  display: flex;
+  flex-direction: column;
   position: relative;
   bottom: 0;
   width: 100%;
@@ -131,7 +133,7 @@ footer {
   background-color: #333;
   font-size: 20px;
   color: white;
-  margin: 10px 10px;
+  margin: 10px 0;
 }
 
 .bottom-links {
@@ -145,6 +147,10 @@ footer {
   background-color: black;
   align-items: center;
   justify-content: center;
+}
+
+.footer-bottom-container span {
+  display: block;
 }
 
 .dummy {
@@ -187,33 +193,30 @@ footer {
 }
 
 .highlight-card:nth-child(1) {
-  background-image:
-    linear-gradient(
+  background-image: linear-gradient(
       to bottom,
       rgba(255, 255, 255, 0.1),
       rgba(0, 0, 0, 1)
     ),
-    url('assets/highlight-1.jpg');
+    url("assets/highlight-1.jpg");
 }
 
 .highlight-card:nth-child(2) {
-  background-image:
-    linear-gradient(
+  background-image: linear-gradient(
       to bottom,
       rgba(255, 255, 255, 0.1),
       rgba(0, 0, 0, 1)
     ),
-    url('assets/highlight-2.png');
+    url("assets/highlight-2.png");
 }
 
 .highlight-card:nth-child(3) {
-  background-image:
-    linear-gradient(
+  background-image: linear-gradient(
       to bottom,
       rgba(255, 255, 255, 0.1),
       rgba(0, 0, 0, 1)
     ),
-    url('assets/hightlight-3.png');
+    url("assets/hightlight-3.png");
 }
 
 .volatile-text {
@@ -245,8 +248,14 @@ footer {
 .card-info {
   max-width: 85%;
   display: inline;
-  float: right;
+  float: left;
+  margin-left: 100px;
   padding: 10px 10px;
+}
+
+.card-info h5 {
+  color: #555;
+  text-transform: uppercase;
 }
 
 .funding-info {
@@ -266,6 +275,11 @@ footer {
   height: 85px;
   padding: 10px 20px;
   background-color: #fffaf8;
+}
+
+.fund-tags p {
+  font-size: 13px;
+  color: #555;
 }
 
 .fly {
@@ -341,10 +355,16 @@ footer {
 
   .card-info {
     min-width: 65%;
+    float: left;
+    margin-left: 70px;
   }
 
   .fly {
     left: 0;
+  }
+
+  .footer-bottom-container span {
+    display: inline;
   }
 }
 
