--- a/style.css
+++ b/style.css
@@ -26,6 +26,11 @@ header {
   justify-content: center;
 }
 
+header div i {
+  font-size: 28px;
+  padding: 10px 20px;
+}
+
 .header-icons i {
   font-size: 18px;
   padding: 15px 16px;
@@ -44,10 +49,13 @@ header {
 }
 
 .header-bottom-section a {
-  font-size: 14px;
-  font-weight: 200;
-  text-decoration: none;
   color: black;
+  text-decoration: none;
+  font-size: 12px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  margin: 0 10px;
 }
 
 .header-links li a {
@@ -84,19 +92,6 @@ header {
   width: 100%;
   height: 48px;
   background-color: #fd3;
-}
-
-.header-bottom-section a {
-  font-size: 12px;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  white-space: nowrap;
-  margin: 0 10px;
-}
-
-header div i {
-  font-size: 28px;
-  padding: 10px 20px;
 }
 
 .random {
@@ -208,7 +203,8 @@ footer {
 }
 
 .highlight-card:nth-child(1) {
-  background-image: linear-gradient(
+  background-image:
+    linear-gradient(
       to bottom,
       rgba(255, 255, 255, 0.1),
       rgba(0, 0, 0, 1)
@@ -217,7 +213,8 @@ footer {
 }
 
 .highlight-card:nth-child(2) {
-  background-image: linear-gradient(
+  background-image:
+    linear-gradient(
       to bottom,
       rgba(255, 255, 255, 0.1),
       rgba(0, 0, 0, 1)
@@ -226,7 +223,8 @@ footer {
 }
 
 .highlight-card:nth-child(3) {
-  background-image: linear-gradient(
+  background-image:
+    linear-gradient(
       to bottom,
       rgba(255, 255, 255, 0.1),
       rgba(0, 0, 0, 1)
@@ -411,10 +409,6 @@ footer {
     justify-content: flex-start;
   }
 
-  .header-bottom-section a {
-    margin-left: 15%;
-  }
-
   .menu-icon {
     display: none;
   }
@@ -440,7 +434,8 @@ footer {
   }
 
   .highlight-card:nth-child(1) {
-    background-image: linear-gradient(
+    background-image:
+      linear-gradient(
         170deg,
         rgba(255, 60, 60, 0.5),
         rgba(0, 0, 0, 1)
