--- a/milestone.css
+++ b/milestone.css
@@ -1,38 +1,16 @@
-.news-card-container {
-  display: flex;
-  flex-direction: column;
-  margin-top: 10px;
-  align-items: stretch;
+.news-section {
+  margin: 20px;
 }
 
-#news-card-container {
-  margin: 0 20px;
-}
-
-#news-card-container h3 a {
-  text-decoration: none;
-  color: black;
-  font-weight: bold;
-}
-
-#news-card-container h2 a {
+.news-section h2 a{
   color: #f42;
-}
-
-.ter-text {
-  color: #aaa;
   text-decoration: none;
-}
-.news-card {
-  display: flex;
-  min-width: 100%;
-  margin-bottom: 20px;
+  font-weight: bold;
 }
 
 .card-img {
   width: 75px;
   height: 75px;
-  display: block;
   background-position: 50%;
   background-size: cover;
 }
@@ -41,74 +19,75 @@
   background-image: url("/assets/news-1.png");
 }
 
-.card-img:nth-child(2) {
-  background-image: url("/assets/news-1.png");
+.news-card {
+  margin: 8px 0;
+  display: grid;
+  grid-template-columns: 75px auto;
 }
 
-.card-img:nth-child(3) {
-  background-image: url("/assets/news-1.png");
+.news-card-container {
+  display: grid;
+  grid-template-columns: 1fr;
 }
 
 .news-card-text {
-  width: calc(100% - 75px);
-  justify-self: right;
+  width: 100%;
+  height: 100%;
+  margin-left: 10px;
+  align-self: start;
 }
 
-.news-card-text p {
-  margin: 5px;
+.news-card-text p, .news-card-text p a {
+  display: inline;
   font-size: 12px;
+  text-decoration: none;
+  color: #aaa;
 }
 
-.news-card-text h3 {
-  margin-left: 5px;
-}
-
-.news-card-text a {
+.news-head {
   font-size: 14px;
+  font-weight: 900;
+  line-height: normal;
+}
+
+.winky-on-laptop {
+  display: none;
+}
+
+.news-head a {
+  
+  text-decoration: none;
+  color: black;
 }
 
 @media only screen and (min-width: 768px) {
-  .news-card-text p {
-    display: inline;
-  }
+  
 }
 
 @media only screen and (min-width: 1024px) {
   .news-card-container {
-    display: initial;
-    margin-top: 30px;
-  }
-
-  #news-card-container {
-    display: block;
-    margin-top: 30px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 0 10px;
   }
 
   .card-img {
-    display: block;
-    width: 270px;
-    height: 130px;
+  display: none;
+  }
+  
+  .winky-on-laptop {
+    display: unset;
+    width: 100%;
+    margin: 10px;
   }
 
   .news-card {
-    margin: auto;
-    display: inline;
-    width: 270px;
-    min-width: initial;
-  }
-
-  .news-card-text {
-    display: block;
-    width: 270px;
-  }
-
-  .news-card-text h3,
-  .news-card-text p,
-  .news-card-text p a {
-    display: inline-block;
-  }
+  margin: 8px 0;
+  width: 100%;
+  height: auto;
+  display: grid;
+  grid-template-columns: 1fr;
+ }
 }
 
-.wtf {
-  display: none;
-}
+
