--- a/milestone.css
+++ b/milestone.css
@@ -2,7 +2,8 @@
   margin: 20px;
 }
 
-.news-section h2 a{
+.news-section h2 a,
+.category h2 a{
   color: #f42;
   text-decoration: none;
   font-weight: bold;
@@ -16,7 +17,7 @@
 }
 
 .card-img:nth-child(1) {
-  background-image: url("/assets/news-1.png");
+  background-image: url('/assets/news-1.png');
 }
 
 .news-card {
@@ -37,7 +38,8 @@
   align-self: start;
 }
 
-.news-card-text p, .news-card-text p a {
+.news-card-text p,
+.news-card-text p a {
   display: inline;
   font-size: 12px;
   text-decoration: none;
@@ -55,26 +57,146 @@
 }
 
 .news-head a {
-  
   text-decoration: none;
   color: black;
 }
 
-@media only screen and (min-width: 768px) {
+.categories-section {
+  margin: 0 10px;
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
+.category {
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
+.category-intro {
+  color: white;
+  width: 100%;
+  padding-top: 75%;
+  position: relative; 
+  background-image: 
+  linear-gradient(
+      to bottom,
+      rgba(250, 249, 249, 0.1),
+      rgb(0, 0, 0)
+    ),
+  url("assets/category-head-image-1.jpg");
+  background-position: 50%;
+}
+
+.category-intro-text {
+  margin: 15px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+
+.category-intro-text h6 a,
+.category-intro-text h6{
+  text-decoration: none;
+  color: rgb(133, 133, 133);
+  font-size: 12px;
+}
+ 
+.category-intro-text h3 {
+  font-size: 20px;
+}
+ 
+.category-intro-text h5 {
+  font-size: 14px;
+  color: rgb(172, 172, 172);
+}
+
+.category-highlight {
+  display: grid;
+  grid-template-columns: auto 96px;
+  grid-template-rows: 96px;
+  background-color: #fff4f2;
+}
+
+.category-highlight-text {
+  margin: auto 10px;
+}
+
+.category-highlight-text h5 {
+  font-size: 13px;
+  color: #ff4422;
+  font-weight: lighter;
+}
+
+.category-highlight-text h4 {
+  font-size: 14px;
+  color: #ff4422;
+  font-weight: bolder;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
+.category-highlight-img {
+  background-image: url("assets/category-highlight-image-1.jpg");
+  /* background-position: 50%; */
+  background-position: center;
+  background-size: cover;
+
+}
+
+.category-lit ul li a{
+  text-decoration: none;
+  font-size: 13px;
+  color: black;
   
+}
+
+.category-lit ul{
+  margin: 5px 0;
+  list-style: none;
+}
+
+.category-lit ul li::before {
+  content: "\2022";  
+  color: #ff4422; 
+  font-weight: bold; 
+  display: inline-block; 
+}
+
+.category-lit ul li {
+  padding: 13px 0;
+  border-bottom: 1px solid rgb(230, 230, 230);
+}
+
+.crossed {
+  text-decoration: line-through;
+  font-size: 12px;
+  color: #aaaaaa;
+}
+.not-crossed {
+  font-size: 14px;
+  color: #555555;
+}
+
+@media only screen and (min-width: 768px) {
+  .categories-section {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px 10px;
+  
+}
 }
 
 @media only screen and (min-width: 1024px) {
   .news-card-container {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 0 10px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 0 10px;
   }
 
   .card-img {
-  display: none;
+    display: none;
   }
-  
+
   .winky-on-laptop {
     display: unset;
     width: 100%;
@@ -82,12 +204,16 @@
   }
 
   .news-card {
-  margin: 8px 0;
-  width: 100%;
-  height: auto;
+    margin: 8px 0;
+    width: 100%;
+    height: auto;
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+
+  .categories-section {
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 10px;
  }
 }
-
-
