--- a/milestone.css
+++ b/milestone.css
@@ -2,6 +2,11 @@
   margin: 20px;
 }
 
+.news-head a {
+  text-decoration: none;
+  color: black;
+}
+
 .news-section h2 a,
 .category h2 a {
   color: #f42;
@@ -56,11 +61,6 @@
   display: none;
 }
 
-.news-head a {
-  text-decoration: none;
-  color: black;
-}
-
 .categories-section {
   margin: 0 10px;
   display: grid;
@@ -77,7 +77,8 @@
   width: 100%;
   padding-top: 75%;
   position: relative;
-  background-image: linear-gradient(
+  background-image:
+    linear-gradient(
       to bottom,
       rgba(250, 249, 249, 0.1),
       rgb(0, 0, 0)
@@ -122,13 +123,13 @@
 
 .category-highlight-text h5 {
   font-size: 13px;
-  color: #ff4422;
+  color: #f42;
   font-weight: lighter;
 }
 
 .category-highlight-text h4 {
   font-size: 14px;
-  color: #ff4422;
+  color: #f42;
   font-weight: bolder;
   text-overflow: ellipsis;
   overflow: hidden;
@@ -153,7 +154,7 @@
 
 .category-lit ul li::before {
   content: "\2022";
-  color: #ff4422;
+  color: #f42;
   font-weight: bold;
   display: inline-block;
 }
@@ -166,11 +167,12 @@
 .crossed {
   text-decoration: line-through;
   font-size: 12px;
-  color: #aaaaaa;
+  color: #aaa;
 }
+
 .not-crossed {
   font-size: 14px;
-  color: #555555;
+  color: #555;
 }
 
 @media only screen and (min-width: 768px) {
