fix linter errors

--- a/milestone.css
+++ b/milestone.css
@@ -7,6 +7,12 @@
   color: black;
 }
 
+.deals a {
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+
 .news-section h2 a,
 .category h2 a {
   color: #f42;
@@ -22,35 +28,35 @@
 }
 
 .news-card:nth-child(1) .card-img {
-  background-image: url('/assets/news-1.png');
+  background-image: url("/assets/news-1.png");
 }
 
 .news-card:nth-child(2) .card-img {
-  background-image: url('/assets/news2.png');
+  background-image: url("/assets/news2.png");
 }
 
 .news-card:nth-child(3) .card-img {
-  background-image: url('/assets/news-3.jpg');
+  background-image: url("/assets/news-3.jpg");
 }
 
 .news-card:nth-child(4) .card-img {
-  background-image: url('/assets/news-4.png');
+  background-image: url("/assets/news-4.png");
 }
 
 .news-card:nth-child(5) .card-img {
-  background-image: url('/assets/news-5.png');
+  background-image: url("/assets/news-5.png");
 }
 
 .news-card:nth-child(6) .card-img {
-  background-image: url('/assets/news-6.jpg');
+  background-image: url("/assets/news-6.jpg");
 }
 
 .news-card:nth-child(7) .card-img {
-  background-image: url('/assets/news-7.jpg');
+  background-image: url("/assets/news-7.jpg");
 }
 
 .news-card:nth-child(8) .card-img {
-  background-image: url('/assets/news-8.jpg');
+  background-image: url("/assets/news-8.jpg");
 }
 
 .news-card {
@@ -113,12 +119,13 @@
   width: 100%;
   padding-top: 75%;
   position: relative;
-  background-image: linear-gradient(
+  background-image:
+    linear-gradient(
       to bottom,
       rgba(250, 249, 249, 0.1),
       rgb(0, 0, 0)
     ),
-    url('assets/category-head-image-1.jpg');
+    url("assets/category-head-image-1.jpg");
   background-position: 50%;
   background-size: cover;
 }
@@ -183,7 +190,7 @@
 }
 
 .category-highlight-img {
-  background-image: url('assets/category-highlight-image-1.jpg');
+  background-image: url("assets/category-highlight-image-1.jpg");
   background-position: center;
   background-size: cover;
 }
@@ -200,7 +207,7 @@
 }
 
 .category-lit ul li::before {
-  content: '\2022';
+  content: "\2022";
   color: #f42;
   font-weight: bold;
   display: inline-block;
@@ -223,7 +230,7 @@
 }
 
 .to-right {
-  display: inline-block;
+  display: inline;
   float: right;
   text-decoration: none;
   color: #f42;
@@ -232,14 +239,8 @@
 }
 
 .to-left {
-  display: inline-block;
+  display: inline;
   float: left;
-}
-
-.deals a{
-  width: 100%;
-  height: 100%;
-  display: block;
 }
 
 @media only screen and (min-width: 768px) {
