--- a/milestone.css
+++ b/milestone.css
@@ -125,7 +125,8 @@
 }
 
 .category:nth-child(1) .category-intro {
-  background-image: linear-gradient(
+  background-image:
+    linear-gradient(
       to bottom,
       rgba(250, 249, 249, 0.1),
       rgb(0, 0, 0)
@@ -134,7 +135,8 @@
 }
 
 .category:nth-child(2) .category-intro {
-  background-image: linear-gradient(
+  background-image:
+    linear-gradient(
       to bottom,
       rgba(250, 249, 249, 0.1),
       rgb(0, 0, 0)
@@ -143,7 +145,8 @@
 }
 
 .category:nth-child(3) .category-intro {
-  background-image: linear-gradient(
+  background-image:
+    linear-gradient(
       to bottom,
       rgba(250, 249, 249, 0.1),
       rgb(0, 0, 0)
@@ -152,7 +155,8 @@
 }
 
 .category:nth-child(4) .category-intro {
-  background-image: linear-gradient(
+  background-image:
+    linear-gradient(
       to bottom,
       rgba(250, 249, 249, 0.1),
       rgb(0, 0, 0)
@@ -161,7 +165,8 @@
 }
 
 .category:nth-child(5) .category-intro {
-  background-image: linear-gradient(
+  background-image:
+    linear-gradient(
       to bottom,
       rgba(250, 249, 249, 0.1),
       rgb(0, 0, 0)
@@ -170,7 +175,8 @@
 }
 
 .category:nth-child(6) .category-intro {
-  background-image: linear-gradient(
+  background-image:
+    linear-gradient(
       to bottom,
       rgba(250, 249, 249, 0.1),
       rgb(0, 0, 0)
@@ -179,7 +185,8 @@
 }
 
 .category:nth-child(7) .category-intro {
-  background-image: linear-gradient(
+  background-image:
+    linear-gradient(
       to bottom,
       rgba(250, 249, 249, 0.1),
       rgb(0, 0, 0)
@@ -188,7 +195,8 @@
 }
 
 .category:nth-child(8) .category-intro {
-  background-image: linear-gradient(
+  background-image:
+    linear-gradient(
       to bottom,
       rgba(250, 249, 249, 0.1),
       rgb(0, 0, 0)
@@ -197,7 +205,8 @@
 }
 
 .category:nth-child(9) .category-intro {
-  background-image: linear-gradient(
+  background-image:
+    linear-gradient(
       to bottom,
       rgba(250, 249, 249, 0.1),
       rgb(0, 0, 0)
